# SuperChip8Emulator

./: CMakeLists.txt  vcpkg.json
src/: chip8.c  chip8.h  main.c
